[h1]v9.1[/h1]
-You can't enable Electric Drive and Gantry Cranes PMs in states with no electricity supply.
-Automation PMs for Railways now require less goods.
-Pops now want to consume Electricity for heating much more.


[h1]v9.0[/h1]
[b]That's where the real content starts coming in![/b]
-Added new goods: Machine Parts and Copper
-Added Copper Mines
-Added Machine Parts Factory
[i]Machine parts will be used everywhere, often instead of tools, but mainly automation and mining.[/i]
-Automation Rework
[i]Automation has been reworked and standardized for most buildings. Instead of 3-4 automation PMs, there are now 6.[/i]
-Lumber Mill building is back.
[i]Lumber Mills are now the only source of Hardwood.[/i]
-Added new technologies: Mechanical Production, Electrification, Assembly Lines, Automatic Machines
-Added automation for Chemical Plants and Explosives Factory.
-Added automation for Electrics Industries
-Added automation for Railways
-Added automation for Shipyards
-Added Bronze Tools PM for tooling workshops.
-Added Ore Filtering for Iron Mines, allowing to redirect to Copper.
-Added Ore Filtering for Copper Mines, allowing to redirect to Iron.
-Added automation for Synthetic Plants. Rayon PMs don't affect employment anymore.
-Tweaked Distilleries, Steel Mills, Artillery Foundries employment and/or PMs.
-Rebalanced Motor Industries PMs, latter ones now use machine parts.
-Electronics Industries now uses copper for telephone production, rather than iron.
-Power Plants now use copper, reworked employment. Added automation PMG.
-Reshuffled Market Access Price Impact modifiers among techs.
-Moved Patent Stills to Crystal Glass tech.
-Increased max innovation investment cap 50 >> 60.
-Chemical Plants and Artillery Foundries now use copper.
-Steam Threshing Machines PMs for grain farms now use Machine Parts.
-Ore Filtering now uses chemicals and/or machine parts.
-Redone most new Food Industries PM icons.
-Buffed Private Schools.
-Nerfed Religious Schools.