@@ -406,7 +406,7 @@ law_council_republic = {
 		country_legitimacy_govt_total_votes_add = 10
 		country_legitimacy_govt_size_add = 1
 		country_legitimacy_ideological_incoherence_mult = -0.1
-		interest_group_ig_trade_unions_pol_str_mult = 0.25
+		interest_group_ig_trade_unions_pop_attraction_mult = 0.25
 	}
 	
 	possible_political_movements = {
