@@ -85,8 +85,8 @@ popneed_heating = {
 	entry = {
 		goods = electricity
 		
-		weight = 10
-		max_supply_share = 0.7
+		weight = 100
+		max_supply_share = 0.6
 		min_supply_share = 0.0
 	}
 }
