@@ -15,10 +15,8 @@ pmg_automation_building_lategame_industry = {
 	texture = "gfx/interface/icons/generic_icons/mixed_icon_automation.dds"
 	production_methods = {
 		pm_automation_disabled
-		pm_automation_pneumatic_conveyor
-		pm_automation_electric_drive
-		pm_automation_conveyor_production
-		pm_automation_assembly_lines
+		pm_automation_conveyor_production_late
+		pm_automation_assembly_lines_late
 	}
 }
 
