@@ -315,3 +315,17 @@
  pm_automation_gantry_cranes_shipyard:0 "$pm_automation_gantry_cranes$"
  pm_automation_modern_cranes_shipyard:0 "$pm_automation_modern_cranes$"
  pmg_automation_building_shipyard:0 "$pmg_automation$"
+ 
+ # v9.1
+ company_iex_colored_metals:0 "Цветнометаллический конгломерат"
+ company_iex_colored_metals_dynamic_name_tag_singular:0 "меди"
+ company_iex_colored_metals_dynamic_name_tag_plural:0 "медь"
+ 
+ company_iex_lumber_union:0 "Лесообработочная компания"
+ company_iex_lumber_union_dynamic_name_tag_singular:0 "лесоводство"
+ company_iex_lumber_union_dynamic_name_tag_plural:0 "доски"
+ 
+ iex_is_subject_modifier:0 "Управление сверху"
+ 
+ pm_automation_conveyor_production_late:0 "$pm_automation_conveyor_production$"
+ pm_automation_assembly_lines_late:0 "$pm_automation_assembly_lines$"
