@@ -17,7 +17,7 @@
         bg_logging = 14
         bg_fishing = 6
         bg_whaling = 4
-		bg_copper_mining = 20
+		bg_copper_mining = 24
     }
     resource = {
         type = "bg_rubber"
@@ -294,7 +294,7 @@ STATE_ANTOFAGASTA = {
         bg_iron_mining = 30
         bg_sulfur_mining = 48
         bg_fishing = 5
-		bg_copper_mining = 40
+		bg_copper_mining = 60
     }
     resource = {
         type = "bg_gold_fields"
@@ -1042,7 +1042,7 @@ STATE_SAO_PAULO = {
     capped_resources = {
         bg_logging = 22
         bg_fishing = 5
-		bg_copper_mining = 5
+		bg_copper_mining = 16
     }
     resource = {
         type = "bg_rubber"
@@ -1070,7 +1070,7 @@ STATE_MINAS_GERAIS = {
         bg_iron_mining = 45
         bg_lead_mining = 30
         bg_logging = 24
-		bg_copper_mining = 8
+		bg_copper_mining = 15
     }
     resource = {
         type = "bg_gold_fields"
@@ -1198,7 +1198,7 @@ STATE_PIAUI = {
         bg_iron_mining = 36
         bg_logging = 14
         bg_fishing = 7
-		bg_copper_mining = 5
+		bg_copper_mining = 8
     }
     resource = {
         type = "bg_rubber"
@@ -1245,7 +1245,7 @@ STATE_PERNAMBUCO = {
     capped_resources = {
         bg_logging = 5
         bg_fishing = 3
-		bg_copper_mining = 10
+		bg_copper_mining = 16
     }
     resource = {
         type = "bg_rubber"
