@@ -159,7 +159,7 @@ STATE_PUNJAB = {
     arable_resources = { "bg_wheat_farms" "bg_livestock_ranches" "bg_coffee_plantations" "bg_cotton_plantations" "bg_silk_plantations" "bg_dye_plantations" "bg_tea_plantations" "bg_tobacco_plantations" "bg_vineyard_plantations" }
     capped_resources = {
         bg_logging = 11
-		bg_copper_mining = 4
+		bg_copper_mining = 20
     }
 }
 
@@ -176,7 +176,7 @@ STATE_NAGPUR = {
     capped_resources = {
         bg_iron_mining = 18
         bg_logging = 9
-		bg_copper_mining = 16
+		bg_copper_mining = 24
     }
 }
 
@@ -317,7 +317,7 @@ STATE_CIRCARS = {
         bg_iron_mining = 21
         bg_logging = 11
         bg_fishing = 18
-		bg_copper_mining = 10
+		bg_copper_mining = 30
     }
     naval_exit_id = 3050
 }
