@@ -14,7 +14,7 @@
         bg_lead_mining = 24
         bg_logging = 17
         bg_fishing = 10
-		bg_copper_mining = 9
+		bg_copper_mining = 16
     }
     resource = {
         type = "bg_rubber"
@@ -41,7 +41,7 @@ STATE_NORTH_BORNEO = {
         bg_sulfur_mining = 36
         bg_logging = 20
         bg_fishing = 8
-		bg_copper_mining = 10
+		bg_copper_mining = 20
     }
     resource = {
         type = "bg_gold_fields"
@@ -73,7 +73,7 @@ STATE_WEST_BORNEO = {
         bg_lead_mining = 30
         bg_logging = 17
         bg_fishing = 7
-		bg_copper_mining = 18
+		bg_copper_mining = 30
     }
     resource = {
         type = "bg_gold_fields"
@@ -327,7 +327,7 @@ STATE_MOLUCCAS = {
     capped_resources = {
         bg_logging = 4
         bg_fishing = 6
-		bg_copper_mining = 6
+		bg_copper_mining = 8
     }
     resource = {
         type = "bg_rubber"
@@ -352,7 +352,7 @@ STATE_CELEBES = {
         bg_iron_mining = 27
         bg_logging = 14
         bg_fishing = 4
-		bg_copper_mining = 12
+		bg_copper_mining = 16
     }
     resource = {
         type = "bg_rubber"
